# wapow

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  wapow-podcasts.archive  wapow-videos.archive
wapow-app/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
wapow-app/api/: __init__.py  auth.py  celery_client.py  config.py  main.py  tasks.py
wapow-app/api/db/: __init__.py  mongodb.py  neo4j_query.py
wapow-app/api/routers/: articles.py  comments.py  content.py  conversion_jobs.py  recommendations.py  saved_articles.py  stories.py
wapow-app/api/scripts/: __init__.py  merge_articles_collections.py  migrate_saved_to_users.py  seed_neo4j.py  sync_clickhouse_to_neo4j.py
wapow-app/api/services/: comments.py  content.py  conversion_jobs.py  stories.py  user.py
wapow-app/api/services/story_pipeline/: __init__.py  analyzer.py  (+5 more)
wapow-app/clickhouse-config/: users.xml
wapow-app/clickhouse-init/: 001_events.sh
wapow-app/scripts/: sync_clickhouse_cron.sh
wapow-scraper/: .env.example  Dockerfile  pyproject.toml  requirements.txt
wapow-scraper/scraper/: __init__.py  config.py  main.py
wapow-scraper/scraper/models/: __init__.py  source.py
wapow-scraper/scraper/processors/: deduplicator.py  normalizer.py
wapow-scraper/scraper/scrapers/: base.py  playwright_scraper.py  web_scraper.py
wapow-scraper/scraper/sources/: sources.yaml
wapow-scraper/scraper/tasks/: __init__.py  jobs.py  scheduler.py
wapow-scraper/scraper/templates/: dashboard.html
wapow-scraper/scraper/utils/: __init__.py  html_extractor.py  robots.py
(+150 files in other folders)
